// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Col> hook:styler 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flex": 1,
        "flexDirection": "column",
      },
      Object {
        "alignItems": "flex-start",
      },
      undefined,
      Object {
        "marginBottom": 16,
      },
      undefined,
    ]
  }
/>
`;

exports[`<Col> renders 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flex": 1,
        "flexDirection": "column",
      },
      Object {
        "alignItems": "flex-start",
      },
      undefined,
      undefined,
    ]
  }
/>
`;

exports[`<Col> when {align} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flex": 1,
        "flexDirection": "column",
      },
      Object {
        "alignItems": "center",
      },
      undefined,
      undefined,
    ]
  }
/>
`;

exports[`<Col> when {width} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flex": 1,
        "flexDirection": "column",
      },
      Object {
        "alignItems": "flex-start",
      },
      Object {
        "flex": 0,
      },
      undefined,
    ]
  }
/>
`;
